--- a/pages/food.html
+++ b/pages/food.html
@@ -30,7 +30,7 @@
                 <li>Halo Halo</li>
             </ul>
         </ol>
-        <p>Please select any link to learn more about me.</p>
+        <h4>Please select any link to learn more about me.</h4>
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
