--- a/pages/hobby.html
+++ b/pages/hobby.html
@@ -10,7 +10,7 @@
         <hr/>
         <p>Return to <a href="../index.html">main page</a>.</p>
         <h2>Photography</h2>
-        <p>Please select any link to learn more about me.</p>
+        <h5>Please select any link to learn more about me.</h5>
         <nav>
             <a href = "../pages/food.html">Favorite Food</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
