--- a/pages/movie.html
+++ b/pages/movie.html
@@ -40,7 +40,7 @@
         <h3>Quentin Tarantino</h3>
         <h3>J.J. Abrams</h3>
         <hr/>
-        <p>Please select any link to learn more about me.</p>
+        <h6>Please select any link to learn more about me.</h6>
         <div>
             <span>
                 <nav>
