--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>I'm a student at CSUF</li>
             <li>Third Year</li>
             <li>Majoring in Computer Science</li>
-            <li>Filipino</li>
+            <li><q>Filipino</q></li>
         </ul>
         <p>Please select any link to learn more about me.</p>
         <nav>
