--- a/pages/food.html
+++ b/pages/food.html
@@ -6,10 +6,10 @@
         </title>
     </head>
     <body>
-        <h1>Favorite Foods</h1>
+        <h1><i>Favorite Foods</i></h1>
         <hr/>
         <p>Return to <a href="../index.html">main page</a>.</p>
-        <h2>A ordered list of top foods:</h2>
+        <h2><b>A ordered list of top foods:</b></h2>
         <ol>
             <li>Sharwarma</li>
             <li>Spicy Food</li>
@@ -30,6 +30,15 @@
                 <li>Halo Halo</li>
             </ul>
         </ol>
+        <form>
+            <label>
+
+            </label>
+            <input>
+
+            </input>
+        </form>
+        <audio></audio>
         <h4>Please select any link to learn more about me.</h4>
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
