Done with pages

--- a/pages/food.html
+++ b/pages/food.html
@@ -15,30 +15,30 @@
             <li>Spicy Food</li>
             <ul>
                 <li>Crimson Coward</li>
-                <li>Burritos</li>
+                <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
+                <li>Instant Noodles</li>
             </ul>
             <li>Ice Cream</li>
             <ul>
                 <li>Cookie Dough</li>
+                <img src="../images/cookiedough.jpg" title="Cookie Dough">
                 <li>Moose Tracks</li>
             </ul>
-            <li>Deserts</li>
+            <li>Filipino Desserts</li>
             <ul>
-                <li>Guko Pandan</li>
+                <li>Buko Pandan</li>
+                <img src="../images/bukopandan.jpg" title="Buko Pandan">
                 <li>Taho</li>
+                <img src="../images/taho.jpg" title="Buko Pandan">
                 <li>Leche Flan</li>
                 <li>Halo Halo</li>
+                <img src="../images/halohalo.jpg" title="Halo Halo">
             </ul>
         </ol>
         <form>
-            <label>
-
-            </label>
-            <input>
-
-            </input>
+            <label for="favfood">What food should I try next?</label>
+            <input type="text" id="favfood" name="favfood">
         </form>
-        <audio></audio>
         <h4>Please select any link to learn more about me.</h4>
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
