--- a/pages/movie.html
+++ b/pages/movie.html
@@ -37,8 +37,11 @@
         <h2>Movie Directors:</h2>
         <!-- Show some cover image of movie from each director-->
         <h3>Christopher Nolan</h3>
+        <img src="../images/oppenheimer.jpg" title="Oppenheimer" alt="Oppenheimer">
         <h3>Quentin Tarantino</h3>
+        <img src="../images/django.jpg" title="Django" alt="Django">
         <h3>J.J. Abrams</h3>
+        <img src="../images/starwars.jpg" title="Star Wars" alt="Star Wars">
         <hr/>
         <h6>Please select any link to learn more about me.</h6>
         <div>
