--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <hr/>
         <h2>All About Me... Louis!!</h2>
         <ul>
-            <li>I'm a student at CSUF</li>
+            <li>I'm a student at <abbr title="California State University of Fullerton">CSUF</abbr></li>
             <li>Third Year</li>
-            <li>Majoring in Computer Science</li>
+            <li><abbr title="Computer Science">CS</abbr> major</li>
             <li><q>Filipino</q></li>
         </ul>
         <p>Please select any link to learn more about me.</p>
@@ -29,7 +29,11 @@
         <hr/>
         <br/>
         <h3>Here is a picture of me!</h3>
-        <h
+        <br/>
         <img title="picture of me" src="images/me.png" alt="Imagine me">
+        <br/>
+        <audio controls>
+            <source href="audios/me.mp3" type="audio/mpeg">
+        </audio>
     </body>
 </html>
