--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <hr/>
         <br/>
         <h3>Here is a picture of me!</h3>
-        <br/>
-        <img title="picture of me" src="images/me.png" alt="Imagine me">
+        <img title="picture of me" src="images/me.jpg" alt="Imagine me">
         <br/>
         <audio controls>
             <source href="audios/me.mp3" type="audio/mpeg">
