--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <!--Remove later VVVVVV -->
-        <meta name="viewport" content="width=device-width", inital-scale="1.0">
+        <meta name="viewport" content="width=device-width">
         <title>Homepage - Louis</title>
     </head>
     <!--Write content within the body-->
     <body>
-        <h1 title="Hi there!">Welcome to my website &#128516</h1>
+        <h1 title="Hi there!">Welcome to my website &#128516;</h1>
         <hr/>
         <h2>All About Me... Louis!!</h2>
         <ul>
@@ -24,15 +24,16 @@
             <a href = "pages/hobby.html">Favorite Hobby</a> | 
             <a href = "pages/movie.html">Favorite Moive</a>
         </nav>
-        <br/>
-        <br/>
-        <hr/>
-        <br/>
+        <br>
+        <br>
+        <hr>
+        <br>
         <h3>Here is a picture of me!</h3>
         <img title="picture of me" src="images/me.jpg" alt="Imagine me">
-        <br/>
+        <br>
+        <!-- Dont forget to add an audio to this -->
         <audio controls>
-            <source href="audios/me.mp3" type="audio/mpeg">
+            <source src="audios/me.mp3" type="audio/mpeg">
         </audio>
     </body>
 </html>
