--- a/pages/food.html
+++ b/pages/food.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
             Favorite Food
@@ -7,33 +7,33 @@
     </head>
     <body>
         <h1><i>Favorite Foods</i></h1>
-        <hr/>
+        <hr>
         <p>Return to <a href="../index.html">main page</a>.</p>
         <h2><b>A ordered list of top foods:</b></h2>
         <ol>
             <li>Sharwarma</li>
             <li>Spicy Food</li>
-            <ul>
-                <li>Crimson Coward</li>
-                <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
-                <li>Instant Noodles</li>
-            </ul>
+                <ul>
+                    <li>Crimson Coward</li>
+                    <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
+                    <li>Instant Noodles</li>
+                </ul>
             <li>Ice Cream</li>
-            <ul>
-                <li>Cookie Dough</li>
-                <img src="../images/cookiedough.jpg" title="Cookie Dough">
-                <li>Moose Tracks</li>
-            </ul>
+                <ul>
+                    <li>Cookie Dough</li>
+                    <img src="../images/cookiedough.jpg" title="Cookie Dough">
+                    <li>Moose Tracks</li>
+                </ul>
             <li>Filipino Desserts</li>
-            <ul>
-                <li>Buko Pandan</li>
-                <img src="../images/bukopandan.jpg" title="Buko Pandan">
-                <li>Taho</li>
-                <img src="../images/taho.jpg" title="Buko Pandan">
-                <li>Leche Flan</li>
-                <li>Halo Halo</li>
-                <img src="../images/halohalo.jpg" title="Halo Halo">
-            </ul>
+                <ul>
+                    <li>Buko Pandan</li>
+                    <img src="../images/bukopandan.jpg" title="Buko Pandan">
+                    <li>Taho</li>
+                    <img src="../images/taho.jpg" title="Buko Pandan">
+                    <li>Leche Flan</li>
+                    <li>Halo Halo</li>
+                    <img src="../images/halohalo.jpg" title="Halo Halo">
+                </ul>
         </ol>
         <form>
             <label for="favfood">What food should I try next?</label>
@@ -43,5 +43,6 @@
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
+        </nav>
     </body>
 </html>
