--- a/pages/hobby.html
+++ b/pages/hobby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
             Favorite Hobby
@@ -7,18 +7,19 @@
     </head>
     <body>
         <h1>Favorite Hobby</h1>
-        <hr/>
+        <hr>
         <p>Return to <a href="../index.html">main page</a>.</p>
         <h2>Photography</h2>
         <p>I love to take photos whenever I go on vacation or just when I go out.</p>
         <p>I enjoy doing city and nature Photography</p>
 
         <h3>Here are some photos I took:</h3>
-        <img src="../images/Pizza Tower.jpg" title="Pizza Tower" width="500"> 
-        <img src="../images/Street Down Dyn.jpg" title="Solvang Street View" width="500">
+        <img src="../images/Pizza_Tower.jpg" title="Pizza Tower" width="500"> 
+        <img src="../images/Street_Down_Dyn.jpg" title="Solvang Street View" width="500">
         <h5>Please select any link to learn more about me.</h5>
         <nav>
             <a href = "../pages/food.html">Favorite Food</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
+        </nav>
     </body>
 </html>
