--- a/pages/movie.html
+++ b/pages/movie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <title>
             Favorite Movie
@@ -8,10 +8,10 @@
     </head>
     <body>
         <h1>Favorite Hobby</h1>
-        <hr/>
+        <hr>
         <p>Return to <a href="../index.html">main page</a>.</p>
         <p>I dont watch movies on a daily basis, but when I do I love:</p>
-        <table border="1">
+        <table>
             <tr>
                 <th>Genre</th>
                 <td>Why?</td>
@@ -42,15 +42,13 @@
         <img src="../images/django.jpg" title="Django" alt="Django">
         <h3>J.J. Abrams</h3>
         <img src="../images/starwars.jpg" title="Star Wars" alt="Star Wars">
-        <hr/>
+        <hr>
         <h6>Please select any link to learn more about me.</h6>
         <div>
-            <span>
-                <nav>
-                    <a href = "../pages/food.html">Favorite Food</a> |
-                    <a href = "../pages/hobby.html">Favorite Hobby</a>
-                </nav>
-            </span>
+            <nav>
+                <a href = "../pages/food.html">Favorite Food</a> |
+                <a href = "../pages/hobby.html">Favorite Hobby</a>
+            </nav>
         </div>
     </body>
 </html>
