--- a/pages/food.html
+++ b/pages/food.html
@@ -39,7 +39,9 @@
             <label for="favfood">What food should I try next?</label>
             <input type="text" id="favfood" name="favfood">
         </form>
-        <h4>Please select any link to learn more about me.</h4>
+        <span>
+            <h4>Please select any link to learn more about me.</h4>
+        </span>
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
