--- a/pages/food.html
+++ b/pages/food.html
@@ -12,19 +12,21 @@
         <h2><b>A ordered list of top foods:</b></h2>
         <ol>
             <li>Sharwarma</li>
-            <li>Spicy Food</li>
+            <li>Spicy Food
                 <ul>
                     <li>Crimson Coward</li>
                     <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
                     <li>Instant Noodles</li>
                 </ul>
-            <li>Ice Cream</li>
+            </li>
+            <li>Ice Cream
                 <ul>
                     <li>Cookie Dough</li>
                     <img src="../images/cookiedough.jpg" title="Cookie Dough">
                     <li>Moose Tracks</li>
                 </ul>
-            <li>Filipino Desserts</li>
+            </li>
+            <li>Filipino Desserts
                 <ul>
                     <li>Buko Pandan</li>
                     <img src="../images/bukopandan.jpg" title="Buko Pandan">
@@ -34,6 +36,7 @@
                     <li>Halo Halo</li>
                     <img src="../images/halohalo.jpg" title="Halo Halo">
                 </ul>
+            </li>
         </ol>
         <form>
             <label for="favfood">What food should I try next?</label>
