--- a/pages/food.html
+++ b/pages/food.html
@@ -14,27 +14,32 @@
             <li>Sharwarma</li>
             <li>Spicy Food
                 <ul>
-                    <li>Crimson Coward</li>
-                    <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
+                    <li>Crimson Coward
+                        <img src="../images/crimsoncoward.jpg" title="Crimson Coward">
+                    </li>
                     <li>Instant Noodles</li>
                 </ul>
             </li>
             <li>Ice Cream
                 <ul>
-                    <li>Cookie Dough</li>
-                    <img src="../images/cookiedough.jpg" title="Cookie Dough">
+                    <li>Cookie Dough
+                        <img src="../images/cookiedough.jpg" title="Cookie Dough">
+                    </li>
                     <li>Moose Tracks</li>
                 </ul>
             </li>
             <li>Filipino Desserts
                 <ul>
-                    <li>Buko Pandan</li>
+                    <li>Buko Pandan
                     <img src="../images/bukopandan.jpg" title="Buko Pandan">
-                    <li>Taho</li>
-                    <img src="../images/taho.jpg" title="Buko Pandan">
+                    </li>
+                    <li>Taho
+                        <img src="../images/taho.jpg" title="Buko Pandan">
+                    </li>
                     <li>Leche Flan</li>
-                    <li>Halo Halo</li>
-                    <img src="../images/halohalo.jpg" title="Halo Halo">
+                    <li>Halo Halo
+                        <img src="../images/halohalo.jpg" title="Halo Halo">
+                    </li>
                 </ul>
             </li>
         </ol>
@@ -42,9 +47,7 @@
             <label for="favfood">What food should I try next?</label>
             <input type="text" id="favfood" name="favfood">
         </form>
-        <span>
             <h4>Please select any link to learn more about me.</h4>
-        </span>
         <nav>
             <a href = "../pages/hobby.html">Favorite Hobby</a> |
             <a href = "../pages/movie.html">Favorite Movie</a>
