--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
         <!-- Dont forget to add an audio to this -->
         <audio controls>
-            <source src="audios/me.mp3" type="audio/mpeg">
+            <source src="audios/me.mp3" type="audio/mp3">
         </audio>
     </body>
 </html>
